chore(book): after hard work